--- a/templates/Groovy.xml
+++ b/templates/Groovy.xml
@@ -1,3 +1,5 @@
 <templateSet group="Groovy">
-  <template name="sout" value="println $END$" shortcut="SPACE" description="Prints a string to System.out" toReformat="true" toShortenFQNames="true" />
+  <template name="sout" value="println $END$" shortcut="SPACE" description="Prints a string to System.out" toReformat="true" toShortenFQNames="true">
+    <context />
+  </template>
 </templateSet>
